--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Build and run dev container task
       uses: devcontainers/ci@v0.3
       with:
-        runCmd: ./make.sh
+        runCmd: jupyter execute analyse_qotw/Analysis.ipynb
         push: never
     - uses: azure/login@v2
       with:
